# exiCPP

./: .gitattributes  .gitignore  CMakeLists.txt  Driver.cpp  Driver.hpp  DriverTests.cpp  NewLib.cmake  README.md  Setup.cmake  TODO.md  XMLDumper.cpp
doc/md/: Changes.md
examples/: .gitignore  044.xml  Basic.xml  Basic2.xml  BasicNoopt.exi  BasicNooptB.exi  Customers.xml  CustomersNoopt.exi  CustomersNooptB.exi  IPO.xml  MultiNamespace.xml  Namespace.xml  NamespaceNoopt.exi  NamespaceNooptB.exi  Nested.xml  Orders.exi  PersonnelA.xml  SortTest.xml  SpecExample.xsd  SpecExampleB.exi  Thai.xml  ThaiNoopt.exi  ThaiNooptB.exi
include/core/: CMakeLists.txt  Config.inc.in
include/core/Common/: ADL.hpp  APInt.hpp  APSInt.hpp  AlignedInt.hpp  Any.hpp  Array.hpp  ArrayRef.hpp  BitVector.hpp  Box.hpp  CRTPTraits.hpp  CachedHashString.hpp  CompressedPair.hpp  ConstexprLists.hpp  DenseMap.hpp  DenseMapInfo.hpp  DenseSet.hpp  EnumArray.hpp  EnumTraits.hpp  EpochTracker.hpp  Features.hpp  FunctionRef.hpp  FunctionTraits.hpp  Fundamental.hpp  Hashing.hpp  IntrusiveRefCntPtr.hpp  MMatch.hpp  ManualDrop.hpp  ManualRebind.hpp  Map.hpp  MaybeBox.hpp  MaybeBoxed.hpp  Naked.hpp  Option.hpp  PagedVec.hpp  PointerIntPair.hpp  PointerUnion.hpp  Poly.hpp  QualTraits.hpp  Ref.hpp  Result.hpp  (+30 more)
include/core/Common/D/: Char.hpp  CheckAlloc.hpp  Expect.hpp  IdxSeq.mac  STL.hpp  Scalar128.hpp  Str.hpp
include/core/Config/: ABIBreak.inc.in  Config.inc.in  FeatureFlags.hpp  XML.inc.in
include/core/Support/: AlignedUnion.hpp  Alignment.hpp  Alloc.hpp  Allocator.hpp  AllocatorBase.hpp  Atomic.hpp  AutoConvert.hpp  BuryPointer.hpp  Capacity.hpp  Casting.hpp  Chrono.hpp  ConvertUTF.hpp  Debug.hpp  Endian.hpp  Errc.hpp  Error.hpp  ErrorHandle.hpp  ErrorOr.hpp  ExitCodes.hpp  ExtensibleRTTI.hpp  Filesystem.hpp  FmtBase.hpp  FmtBuffer.hpp  Format.hpp  IntCast.hpp  Limits.hpp  LogLevel.hpp  Logging.hpp  MD5.hpp  ManagedStatic.hpp  MathExtras.hpp  MemoryBuffer.hpp  MemoryBufferRef.hpp  NativeFormatting.hpp  Path.hpp  PointerLikeTraits.hpp  Process.hpp  Program.hpp  RTTI.hpp  Ratio.hpp  (+19 more)
include/core/Support/D/: IO.hpp
include/exi/Basic/: Bounded.hpp  CompactID.hpp  DirectoryEntry.hpp  ErrorCodes.hpp  EventCodes.hpp  ExiHeader.hpp  ExiOptions.hpp  FileEntry.hpp  FileManager.hpp  FilesystemStatCache.hpp  NBitInt.hpp  ProcTypes.hpp  Runes.hpp  StringTables.hpp  XML.hpp  XMLContainer.hpp  XMLHandler.hpp  XMLManager.hpp
include/exi/Decode/: BodyDecoder.hpp  HeaderDecoder.hpp  Serializer.hpp  UnifyBuffer.hpp  XMLSerializer.hpp
include/exi/Encode/: BodyEncoder.hpp  HeaderEncoder.hpp
include/exi/Grammar/: DecoderSchema.hpp  Grammar.hpp  Schema.hpp
include/exi/Stream/: BitStream.hpp  BitStreamReader.hpp  BitStreamWriter.hpp  ChannelReader.hpp  OrderedReader-New.hpp  OrderedReader-Old.hpp  OrderedReader.hpp  OrderedWriter.hpp  Reader.hpp  Stream.hpp  StreamVariant.hpp  Writer.hpp
include/exi/Stream2/: ChannelReader.hpp  OrderedReader.hpp  Reader.hpp  Stream.hpp
include/exi/StreamOld/: BitStreamWriter.hpp  Stream.hpp
include/exicpp/: Basic.hpp  BinaryBuffer.hpp  Content.hpp  Errors.hpp  Features.hpp  Filesystem.hpp  HeapBuffer.hpp  Options.hpp  Reader.hpp  Strings.hpp  Traits.hpp  Writer.hpp  XML.hpp
include/exicpp/Common/: MarkBitwise.hpp
include/exicpp/Debug/: CheckFlags.hpp  Format.hpp  Location.hpp  Terminal.hpp  _Format.hpp
lib/core/Common/: APInt.cpp  APSInt.cpp  Option.cpp  SmallVec.cpp  StrRef.cpp  StringExtras.cpp  StringMap.cpp  Twine.cpp
lib/core/Config/: ABIBreak.cpp
lib/core/Support/: Alloc.cpp  Allocator.cpp  AutoConvert.cpp  BuryPointer.cpp  Chrono.cpp  ConvertUTF.cpp  ConvertUTFWrappers.cpp  Debug.cpp  DebugOptions.hpp  Error.cpp  ErrorHandle.cpp  ExtensibleRTTI.cpp  FmtBuffer.cpp  Format.cpp  IntCast.cpp  MD5.cpp  ManagedStatic.cpp  Memcpy.cpp  MemoryBuffer.cpp  MemoryBufferRef.cpp  NativeFormatting.cpp  Path.cpp  Process.cpp  Program.cpp  PureVirtual.cpp  RTTI.cpp  SafeAlloc.cpp  Signals.cpp  StringSaver.cpp  TokenizeCmd.cpp  UndName.hpp  VersionTuple.cpp  VirtualFilesystem.cpp  circular_raw_ostream.cpp  rapidhash.cpp  raw_ostream.cpp
lib/exi/Basic/: ErrorCodes.cpp  EventCodes.cpp  ExiHeader.cpp  ExiOptions.cpp  FileEntry.cpp  FileManager.cpp  FilesystemStatCache.cpp  NBitInt.cpp  Runes.cpp  StringTables.cpp  XML.cpp  XMLContainer.cpp  XMLManager.cpp
lib/exi/Decode/: BodyDecoder.cpp  HeaderDecoder.cpp  Serializer.cpp  StringTables.cpp
lib/exi/Encode/: HeaderEncoder.cpp  StringTables.cpp
lib/exi/Grammar/: Grammar.cpp  Schema-Flat.cpp  Schema.cpp  SchemaGet.hpp
lib/exi/Stream/: BitStream.cpp  BitStreamCommon.hpp  BitStreamIn.cpp  BitStreamOut.cpp  BitStreamReader.cpp  BitStreamWriter.cpp  Stream.cpp
lib/exi/Stream2/: Stream.cpp
lib/exi/StreamOld/: BitStreamReader.cpp  BitStreamWriter.cpp
old/: CMakeLists.txt  Driver.cpp
old/include/exicpp/: Basic.hpp  HeapBuffer.hpp  Options.hpp  Reader.hpp  Writer.hpp  XML.hpp
old/include/exicpp/Debug/: Format.hpp
old/src/: BinaryBuffer.cpp  Filesystem.cpp  XML.cpp
old/src/Debug/: Format.cpp  Terminal.cpp
old/test/: .gitignore
old/test/unit/: Comparison.cpp
old/utils/: CompareXml.hpp  ExiToXml.hpp  Print.hpp
redirect/: CMakeLists.txt  Driver.cpp  README.md
redirect/include/: ArgList.hpp  ArrayRef.hpp  Buf.hpp  Detours.hpp  Env.hpp  Exports.hpp  Features.hpp  Fundamental.hpp  Globals.hpp  Logging.hpp  Mem.hpp  OptInt.hpp  Patches.hpp  RVA.hpp  Strings.hpp  Version.hpp  WinAPI.hpp
redirect/lib/: ArrayRef.cpp  Buf.cpp  Detours.cpp  DetoursImpl.cpp  DetoursSetup.cpp  Env.cpp  Globals.cpp  Interception.hpp  Logging.cpp  NtImports.cpp  NtImports.hpp  Patches.cpp  RVA.cpp  Strings.cpp  VMemcpy.cpp  VMemset.cpp  Version.cpp
resources/: EXIOptions.xsd
scripts/: ConfigureFiles.cmake  ListUtils.cmake  SetFlags.cmake  SetVersion.cmake
src/: BinaryBuffer.cpp  Errors.cpp  Writer.cpp  XML.cpp
src/Debug/: CheckFlags.cpp  Format.cpp  RapidxmlHandler.cpp  Terminal.cpp
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  Comparison.cpp  Driver.cpp  Testing.hpp
utils/: CompareXml.cpp  ExiToXml.cpp  Print.hpp  STL.hpp
(+13 files in other folders)
